# query-editor

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  run.sh
backend/: Dockerfile  main.py  requirements.txt
backend/models/: schemas.py
backend/parser/: __init__.py  ast_nodes.py  compiler.py  lexer.py  parser.py
backend/routers/: compile.py  execute.py  schema.py
backend/scripts/: seed_demo_dataset.py
backend/services/: executor.py  schema_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/Editor/: DslEditor.tsx
frontend/src/components/Results/: ResultTable.tsx
frontend/src/components/SchemaPanel/: SchemaTree.tsx
frontend/src/components/SqlPreview/: SqlViewer.tsx
frontend/src/hooks/: useCompiler.ts  useExecute.ts  useSchema.ts
frontend/src/lib/: aliasResolver.ts  api.ts  monasqlLang.ts  schemaCache.ts
frontend/src/types/: index.ts
monasql/: README.md  __init__.py  expr.py  helpers.py  pyproject.toml  query.py  render.py  rewrite.py  schema.py
tests/: test_api.py  test_dsl.py  test_monasql.py
