[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "monasql-workspace"
version = "0.1.0"
description = "Monadic SQL transpiler + Web IDE (monasql engine, DSL compiler, FastAPI backend)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Backend / IDE server (mirrors backend/requirements.txt)
server = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "google-cloud-bigquery>=3.17",
]
dev = ["pytest>=8.0", "httpx>=0.27"]

# Install just the `monasql` engine as an importable package:  pip install -e .
[tool.setuptools]
packages = ["monasql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
